--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+mx-ease-themes (25.09.04) mx; urgency=medium
+
+  * mx-ease and ease-dark - xfce4-whiskermenu fixes
+  * mx-ease and ease-dark - seahorse fixes
+
+ -- Melber <melber-mx-linux@gmail.com>  Sun, 28 Sep 2025 23:15:00 +0100
+ 
 mx-ease-themes (25.09.03) mx; urgency=medium
 
   * add depend gnome-themes-extra
