--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
 mx-ease-themes (25.10.01) mx; urgency=medium
 
   * mx-ease and ease-dark - seahorse fixes
-  * mx-ease and ease-dark - libreoffice fix
+  * mx-ease and ease-dark - libreoffice fixes
   * mx-ease-dark - gtk2 and xfwm4 fixes
 
- -- Melber <melber-mx-linux@gmail.com>  Sat, 04 Oct 2025 17:45:00 +0100
+ -- Melber <melber-mx-linux@gmail.com>  Sun, 05 Oct 2025 00:25:00 +0100
 
 mx-ease-themes (25.09.04) mx; urgency=medium
 
