--- a/debian/changelog
+++ b/debian/changelog
@@ -3,7 +3,7 @@ mx-ease-themes (25.10.02) mx; urgency=medium
   * mx-ease and ease-dark - gtk3 fixes
   * mx-ease and ease-dark - gtk4 fixes foliate
 
- -- Melber <melber-mx-linux@gmail.com>  Xxx, XX Oct 2025 00:25:00 +0100
+ -- Melber <melber-mx-linux@gmail.com>  Wed, 22 Oct 2025 16:55:00 +0100
 
 mx-ease-themes (25.10.01) mx; urgency=medium
 
