--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
 mx-ease-themes (26.01.03) mx; urgency=medium
 
-  * bleachbit and inkscape button fixes
-  * gimp theme to override default app theming
+  * bleachbit and inkscape fixes
+  * gimp.css to apply themes in gimp
 
- -- Melber <melber-mx-linux@gmail.com>  Wed, 28 Jan 2026 01:30:00 +0100
+ -- Melber <melber-mx-linux@gmail.com>  Wed, 28 Jan 2026 23:10:00 +0100
 
 mx-ease-themes (26.01.02) mx; urgency=medium
 
